--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,7 +1,18 @@
+@import "../scss/UTILITIES/mixins";
+@import "../scss/UTILITIES/variables";
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+section[id] {
+    scroll-margin-top: 50px;
 }
 
 body {
@@ -9,32 +20,59 @@ body {
 }
 
 /*** TOP BAR ***/
-
-.container-navBar {
+.topheader {
+    position: fixed;
+    left: 0;
+    top: 0;
     width: 100%;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    grid-template-columns: 5;
-    grid-template-rows: 1;
-    grid-template-areas: "navAnimation navImg navBar navBar navBar";
 }
 
-.navAnimation {
-    grid-area: navAnimation;
+.topnav {
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    justify-content: space-evenly;
+    background-color: #fff;
+    color: $color-secundario;
+    /*** LOGO ***/
 
-    img {
+    .logo {
         display: flex;
-        justify-content: center;
         align-items: center;
-        height: 7vh;
-        margin: 0;
-        -webkit-animation: tilt-in-fwd-tl 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-        animation: tilt-in-fwd-tl 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     }
+
+    .menu {
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+        li {
+            padding: 0 15px;
+        }
+
+        a {
+            color: $color-secundario;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+    }
+
+    .open-menu,
+    .close-menu {
+        display: none;
+    }
+
+}
+
+img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 7vh;
+    margin: 0;
+    -webkit-animation: tilt-in-fwd-tl 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: tilt-in-fwd-tl 0.6s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 @-webkit-keyframes tilt-in-fwd-tl {
@@ -65,79 +103,6 @@ body {
     }
 }
 
-.navBar ul {
-    list-style-type: none;
-    display: flex;
-    gap: 60px;
-    justify-content: space-between;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 20px;
-
-    li a {
-        text-decoration: none;
-        color: rgb(255, 94, 0);
-        font-weight: bold;
-    }
-}
-
-span {
-    color: rgb(255, 111, 0);
-    font-size: 35px;
-}
-
-
-p {
-    font-size: 12px;
-}
-
-.span-1 {
-    color: rgb(23, 186, 97);
-    font-size: 18px;
-
-}
-
-.span-2 {
-    color: rgb(255, 94, 0);
-    font-size: 14px;
-}
-
-/** IMG - FONDO DE SECC **/
-
-.fondo_aboutUs img,
-.fondo_index img {
-    width: 100%;
-}
-
-/*** SECCION CARRUSEL ***/
-
-
-/*CARRUSEL*/
-
-.contenedor_carrusel {
-    width: 100%;
-    margin: auto;
-    overflow: hidden;
-}
-
-/*ANIMACION - OBRAS SOCIALES*/
-
-#slider {
-    width: 3000px;
-    height: 220px;
-    background-image: url("../assets/img/sliderObsSoc.png");
-    background-size: 100%;
-    animation: slider 40s infinite linear;
-}
-
-@keyframes slider {
-    to {
-        background-position: 2000px;
-    }
-}
-
-
-
-
 /*** FOOTER ***/
 
 .contenedor-footer {
@@ -152,7 +117,6 @@ p {
     ;
     justify-content: center;
     align-items: center;
-
 }
 
 .logo-footer {
@@ -228,9 +192,7 @@ p {
         font-weight: 1000;
         display: flex;
         justify-content: center;
-
     }
-
 
     .box-7 {
         grid-area: box-7;
@@ -242,8 +204,6 @@ p {
         grid-area: box-8;
     }
 }
-
-
 
 .dom {
     grid-area: dom;
@@ -263,14 +223,170 @@ p {
     gap: 10px;
 }
 
+/**** SECC INDEX ****/
+
+.main_index {
+    height: 100vh;
+    background-image: url("../assets/img/index.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h1 {
+        padding-top: 500px;
+        font-size: 100px;
+    }
+
+    h2 {
+        font-size: 40px;
+    }
+
+    span {
+        color: $color-secundario;
+        font-size: 35px;
+    }
+
+    p {
+        font-size: 12px;
+    }
+
+}
+
+/**** SECC SUC ****/
+
+.main_suc {
+    height: 88vh;
+    background-image: url("../assets/img/sucursales.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    @include box-shadow;
+}
+
+.title {
+    color: #fff;
+}
+
+iframe {
+    padding-top: 2em;
+    margin-bottom: 1em;
+    width: 35em;
+    height: 21.5em;
+}
+
+/**** SECC SOBRE NOSOTROS ****/
+
+.main_us {
+    background-image: url("../assets/img/us.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    @include box-shadow;
+
+}
+
+.historia {
+    padding-top: 12em;
+    color: #000;
+    font-size: 14px;
+    overflow-y: hidden;
+}
+
+.span-1,
+.span-2 {
+    font-weight: bold;
+    text-shadow: 1px 1px 1px grey;
+}
+
+.span-1 {
+    color: $color-principal
+}
+
+.span-2 {
+    color: $color-secundario;
+}
+
+.titulo_us {
+    color: $color-secundario;
+    font-size: 50px;
+}
+
+
+
+/*CARRUSEL*/
+
+.contenedor_carrusel {
+    width: 105%;
+    margin-top: 13em;
+    display: flex;
+    flex-direction: row;
+    margin-left: -4.5em;
+}
+
+/*ANIMACION - OBRAS SOCIALES*/
+
+#slider {
+    width: 3000px;
+    height: 11vh;
+    background-image: url("../assets/img/sliderObsSoc.png");
+    animation: slider 10s infinite linear;
+}
+
+.carrusel {
+    padding-top: 8px;
+    font-size: 20px;
+}
+
+@keyframes slider {
+    to {
+        background-position: 2000px;
+    }
+}
+
+/**** SECC CONTACTO ****/
+.main-contact {
+    background-image: url("../assets/img/contacto.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+
+    form {
+        width: 400px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+    }
+}
+
+.form-contact {
+    margin-top: 20em;
+    display: flex;
+    justify-content: center;
+}
+
+.contact-form {
+    margin-top: 40px;
+    background-color: rgb(255, 94, 0, 30%);
+    padding: 40px;
+    border-radius: 30px;
+
+}
+
+p {
+    font-size: medium;
+}
+
 /**** SECC PRESTACIONES ****/
-
-
 .grid-prest {
     height: 500px;
     display: flex;
     align-items: center;
-    background: rgb(0, 128, 0, 20%);
+    background: $color-principal;
 }
 
 
@@ -295,112 +411,109 @@ p {
     }
 }
 
-/**** SECC SUCURSALES ****/
-
-.main-suc {
-    background-image: url("../assets/img/sucursales.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.videos-suc {
-    display: flex;
-    flex-direction: column;
-    margin-left: 200px;
-}
-
-.title {
-    color: #fff
-}
-
-/**** SECC SOBRE NOSOTROS ****/
-
-.main-aboutUs {
-    padding-bottom: 100vh;
-    height: 70vh;
-    background-image: url("../assets/img/aboutUs.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.historia p {
-    color: #fff;
-    font-size: 16px;
-    overflow-y: hidden;
-}
-
-
-/**** SECC CONTACTO ****/
-
-.main-contact {
-    height: 110vh;
-    background-image: url("../assets/img/contacto.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: contain;
-
-    form {
-        width: 400px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-    }
-}
-
-.form-contact {
-    display: flex;
-    justify-content: center;
-}
-
-.contact-form {
-    margin-top: 40px;
-    background-color: rgb(255, 94, 0, 30%);
-    padding: 40px;
-    border-radius: 30px;
-
-}
-
-p {
-    font-size: medium;
-}
-
 /*********** TABLET 600px ***********/
 
-@media (max-width: 600px) {
 
-    /** NAVBAR - TABLET 600px **/
 
-    .container-navBar {
-        height: 7vh;
-        display: flex;
+@media (max-width: 768px) {
+
+
+
+
+    .topnav {
         justify-content: space-evenly;
-    }
 
-    .navImg img {
-        display: none;
-    }
+        /*** LOGO ***/
 
-    .navBar ul {
-        gap: 30px;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-weight: bold;
 
-        li {
-            font-size: 15px;
-            display: flex;
-            justify-content: center;
+        /*** MENU ***/
+        .menu {
+            flex-direction: column;
+            position: fixed;
+            left: 0;
+            top: 0;
+            width: 100%;
             align-items: center;
+            background-color: $color-principal;
+            height: 100%;
+            overflow-y: auto;
+
+            opacity: 0;
+            pointer-events: none;
+
+            li {
+                padding: 0;
+                padding-bottom: 100px;
+            }
 
             a {
-                color: rgb(23, 186, 97);
+                color: #fff;
+                font-size: 40px;
             }
+
+            a:hover {
+                color: $color-secundario;
+                transform: scale();
+                font-size: 40px;
+            }
+        }
+
+        .open-menu,
+        .close-menu {
+            display: block;
+            border: none;
+            background-color: none;
+            cursor: pointer;
+        }
+
+        .close-menu {
+            align-self: flex-end;
+            padding: 0px 10px;
+        }
+
+        .menu_opened {
+            opacity: 1;
+            pointer-events: all;
+        }
+
+        .open-menu img,
+        .close-menu img {
+            background: none;
+        }
+
+    }
+
+    .main_index {
+        background-image: url("../assets/img/index-tbl.jpg");
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        color: #fff;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        h1 {
+            padding-top: 400px;
+            font-size: 100px;
+        }
+
+        h2 {
+            font-size: 40px;
+        }
+
+        span {
+            color: $color-secundario;
+            font-size: 35px;
+        }
+
+        p {
+            font-size: 12px;
         }
     }
 
     /**** FOOTER - TABLET 600px ****/
-
-
 
     .contenedor-footer {
         display: flex;
@@ -429,240 +542,5 @@ p {
 
     .box-2 {
         display: none;
-    }
-
-    /**** SECC PRESTACIONES - TABLET 600px ****/
-
-    .grid-prest {
-        height: 86vh;
-        display: grid;
-        justify-content: center;
-        align-items: center;
-        background-image: none;
-        background: linear-gradient(rgb(23, 186, 97), white,
-                rgb(255, 111, 0));
-        overflow-y: scroll;
-    }
-
-    .prest1 {
-        display: flex;
-        justify-content: center;
-    }
-
-    .prest2 {
-        margin: 0;
-
-        img {
-            display: none;
-        }
-    }
-
-    .prest3 {
-        width: 100%;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-
-        img {
-            width: 75%;
-            display: flex;
-            margin-left: 32px;
-            border: 2px solid grey;
-        }
-    }
-
-    .prest4 {
-        display: none;
-    }
-
-    /**** SECC SUCURSALES - TABLET 600px ****/
-
-
-    .main-suc {
-        background-image: url("../assets/img/sucursales-tbl.jpg");
-        height: 115vh;
-    }
-
-    .form-suc {
-        color: rgb(255, 111, 0);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
-
-        h1 {
-            margin-top: 10px;
-        }
-    }
-
-    .CmbBoxSucursal {
-        margin-top: 10px;
-        font-size: 20px;
-    }
-
-    option {
-        font-size: 12px;
-    }
-
-    .videos-suc {
-        margin-top: 50px;
-        margin-left: 7%;
-    }
-
-
-    .title {
-        width: 93%;
-        color: rgb(23, 186, 97);
-        background-color: rgb(128, 128, 128, 60%);
-        border-radius: 10px;
-
-        h1 {
-            display: flex;
-            justify-content: center;
-            font-size: 45px;
-        }
-    }
-
-    /**** SECC ABOUT US - TABLET 600px ****/
-
-    .main-aboutUs {
-        padding-bottom: 10px;
-        height: 100vh;
-        background-image: url("../assets/img/aboutUs-tbl.png");
-        background-repeat: no-repeat;
-        background-size: contain;
-    }
-
-    .historia-tbl {
-        display: none;
-    }
-
-    .historia p {
-        color: black;
-        font-size: 14px;
-        margin-top: 22vh;
-    }
-
-    /**** SECC CONTACTO - TABLET 600px ****/
-
-    .main-contact {
-        background-image: none;
-        height: 90vh;
-
-        form {
-            width: 80vw;
-            background: linear-gradient(ORANGE, white);
-            line-height: 30px;
-        }
-    }
-
-    .form-contact {
-        margin-top: 1vh;
-        background-image: none;
-    }
-
-
-
-    .contact-form {
-        margin-top: 40px;
-        background-color: rgb(255, 94, 0, 30%);
-        padding: 100px;
-    }
-
-    input {
-        line-height: 1.5rem;
-    }
-
-    .select-contact,
-    .contact-form,
-    .reset,
-    .contact-form p .submit {
-        font-size: 20px;
-    }
-
-
-    /*********** MOBILE 360px ***********/
-
-    /**** NAVBAR - MOBILE 360px ****/
-
-    @media (max-width: 360px) {
-
-
-        .navAnimation {
-            display: none;
-        }
-
-        .container-navBar {
-            height: 10vh;
-            flex-direction: column;
-            align-items: center;
-        }
-
-
-
-        .navBar ul {
-            font-family: Georgia, 'Times New Roman', Times, serif;
-
-            li {
-                font-size: 10px;
-
-                a {
-                    color: rgb(255, 94, 0);
-
-                }
-            }
-        }
-
-        .navImg img {
-            width: 100%;
-            display: flex;
-        }
-
-        .container-prest {
-            display: block;
-        }
-
-        .prest1 {
-            margin-top: 4vh;
-        }
-
-        .redes {
-            gap: 60px;
-        }
-
-
-        /**** SECC PRESTACIONES - MOBILE 360px ****/
-
-
-
-        .grid-prest {
-            height: 87vh;
-            background: linear-gradient(rgb(255, 111, 0), rgb(23, 186, 97));
-            overflow-y: scroll;
-        }
-
-        .prest1 {
-            display: flex;
-            justify-content: center;
-        }
-
-        .prest2 img {
-            display: none;
-        }
-
-        .prest3 {
-            grid-template-columns: repeat(1, 1fr);
-            grid-template-rows: repeat(3, 1fr);
-
-            .prest3 img {
-                width: 75%;
-                display: flex;
-                margin-left: 32px;
-                border: 2px solid grey;
-            }
-        }
-
-        .prest4 {
-            display: none;
-        }
     }
 }
