--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ html {
 }
 
 section[id] {
-  scroll-margin-top: 50px;
+  scroll-margin-top: 70px;
 }
 
 body {
@@ -19,6 +19,12 @@ body {
 }
 
 /*** TOP BAR ***/
+.container {
+  width: 100%;
+  max-width: 2000px;
+  min-width: 320px;
+}
+
 .topheader {
   position: fixed;
   left: 0;
@@ -55,143 +61,24 @@ body {
 .topnav .open-menu,
 .topnav .close-menu {
   display: none;
-}
-
-img {
-  display: flex;
   justify-content: center;
-  align-items: center;
-  height: 7vh;
-  margin: 0;
-  -webkit-animation: tilt-in-fwd-tl 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
-  animation: tilt-in-fwd-tl 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
-@-webkit-keyframes tilt-in-fwd-tl {
-  0% {
-    -webkit-transform: rotateY(-20deg) rotateX(35deg) translate(-300px, -300px) skew(35deg, -10deg);
-    transform: rotateY(-20deg) rotateX(35deg) translate(-300px, -300px) skew(35deg, -10deg);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
-    transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
-    opacity: 1;
-  }
-}
-@keyframes tilt-in-fwd-tl {
-  0% {
-    -webkit-transform: rotateY(-20deg) rotateX(35deg) translate(-300px, -300px) skew(35deg, -10deg);
-    transform: rotateY(-20deg) rotateX(35deg) translate(-300px, -300px) skew(35deg, -10deg);
-    opacity: 0;
-  }
-  100% {
-    -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
-    transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
-    opacity: 1;
-  }
-}
 /*** FOOTER ***/
 .contenedor-footer {
-  width: 100%;
-  height: 50px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 100px);
-  grid-template-areas: "logo-footer redes dom contact-footer" "logo-footer redes dom contact-footer";
-  justify-content: center;
+  display: block;
   align-items: center;
 }
-
-.logo-footer {
-  grid-area: logo-footer;
-}
-
-.box-1 img {
-  width: 200px;
-  justify-self: center;
-}
-
-.redes {
-  grid-area: redes;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 80px);
-  grid-template-areas: "box-2 box-2 box-2" "box-3 box-4 box-5";
-}
-
-.box-2 {
-  grid-area: box-2;
-}
-.box-2 p {
-  font-size: 25px;
-  font-weight: 1000;
+.contenedor-footer .redes {
+  padding-top: 2%;
   display: flex;
   justify-content: center;
+  padding: 0;
+  gap: 10%;
 }
-
-.box-3 {
-  grid-area: box-3;
-}
-.box-3 img {
-  width: 40px;
-  margin-bottom: 10px;
-  margin-left: 50px;
-}
-
-.box-4 {
-  grid-area: box-4;
-}
-.box-4 img {
-  width: 40px;
-  margin-bottom: 10px;
-  margin-left: 50px;
-}
-
-.box-5 {
-  grid-area: box-5;
-}
-.box-5 img {
-  width: 40px;
-  margin-bottom: 10px;
-  margin-left: 50px;
-}
-
-.box-6 {
-  grid-area: box-6;
-  font-size: 20px;
-}
-.box-6 p {
-  font-size: 25px;
-  font-weight: 1000;
+.contenedor-footer .copyright {
   display: flex;
   justify-content: center;
-}
-.box-6 .box-7 {
-  grid-area: box-7;
-  display: flex;
-  flex-direction: column;
-}
-.box-6 .box-8 {
-  grid-area: box-8;
-}
-
-.dom {
-  grid-area: dom;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-}
-
-.contact-footer {
-  grid-area: contact-footer;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-bottom: 20px;
-  gap: 10px;
 }
 
 /**** SECC INDEX ****/
@@ -208,7 +95,7 @@ img {
   align-items: center;
 }
 .main_index h1 {
-  padding-top: 500px;
+  padding-top: 350px;
   font-size: 100px;
 }
 .main_index h2 {
@@ -224,41 +111,45 @@ img {
 
 /**** SECC SUC ****/
 .main_suc {
-  height: 88vh;
+  height: 85vh;
   background-image: url("../assets/img/sucursales.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  border: 1px solid rgb(211, 211, 211);
   border-radius: 20px;
   padding: 3em 0 0 5em;
   margin: 3em;
   box-shadow: 1em 1em 15px rgba(255, 94, 0, 0.85);
 }
-
-.title {
+.main_suc .title {
   color: #fff;
 }
-
-iframe {
-  padding-top: 2em;
-  margin-bottom: 1em;
-  width: 35em;
-  height: 21.5em;
+.main_suc iframe {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  width: 50%;
+  height: 18em;
+}
+.main_suc .form-suc {
+  font-size: 18px;
 }
 
 /**** SECC SOBRE NOSOTROS ****/
 .main_us {
   background-image: url("../assets/img/us.png");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
+  border: 1px solid rgb(211, 211, 211);
   border-radius: 20px;
   padding: 3em 0 0 5em;
   margin: 3em;
   box-shadow: 1em 1em 15px rgba(255, 94, 0, 0.85);
+  padding-bottom: 12%;
 }
 
 .historia {
-  padding-top: 12em;
+  padding: 10em 0 1em 1em;
   color: #000;
   font-size: 14px;
   overflow-y: hidden;
@@ -292,17 +183,48 @@ iframe {
   margin-left: -4.5em;
 }
 
+@-webkit-keyframes tilt-in-fwd-tl {
+  0% {
+    -webkit-transform: rotateY(-20deg) rotateX(35deg) translate(-300px, -300px) skew(35deg, -10deg);
+    transform: rotateY(-20deg) rotateX(35deg) translate(-300px, -300px) skew(35deg, -10deg);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+    transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+    opacity: 1;
+  }
+}
+@keyframes tilt-in-fwd-tl {
+  0% {
+    -webkit-transform: rotateY(-20deg) rotateX(35deg) translate(-300px, -300px) skew(35deg, -10deg);
+    transform: rotateY(-20deg) rotateX(35deg) translate(-300px, -300px) skew(35deg, -10deg);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+    transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+    opacity: 1;
+  }
+}
 /*ANIMACION - OBRAS SOCIALES*/
-#slider {
-  width: 3000px;
-  height: 11vh;
-  background-image: url("../assets/img/sliderObsSoc.png");
-  animation: slider 10s infinite linear;
+.h2-carrusel {
+  margin: 4.5% 0 0 10%;
+  font-size: 20px;
+  text-decoration: underline;
+}
+.h2-carrusel span {
+  color: rgb(23, 186, 97);
 }
 
 .carrusel {
-  padding-top: 8px;
-  font-size: 20px;
+  height: 93px;
+}
+
+#slider {
+  width: 100%;
+  background-image: url("../assets/img/sliderObsSoc.png");
+  animation: slider 20s infinite linear;
 }
 
 @keyframes slider {
@@ -311,62 +233,84 @@ iframe {
   }
 }
 /**** SECC CONTACTO ****/
-.main-contact {
-  background-image: url("../assets/img/contacto.jpg");
-  background-repeat: no-repeat;
+.form-contact {
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 14px;
   background-position: center;
+  background-repeat: no-repeat;
   background-size: contain;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-areas: "box-c1 box-c2" "box-c1 box-c2" "box-c1 box-c2" "box-c3 box-c3";
+  background-image: url("../assets/img/contacto.jpg");
+  background-position: center;
+  border: 1px solid rgb(211, 211, 211);
+  border-radius: 20px;
+  border-radius: 20px;
+  padding: 3em 0 0 5em;
+  margin: 3em;
+  box-shadow: 1em 1em 15px rgba(255, 94, 0, 0.85);
+  padding-top: 2%;
 }
-.main-contact form {
-  width: 400px;
+
+.box-c1 {
+  grid-area: box-c1;
+}
+
+.box-c2 {
+  grid-area: box-c2;
+}
+
+.box-c1,
+.box-c2 {
+  display: grid;
+  justify-content: center;
+  justify-self: center;
+}
+
+.box-c1 p,
+.box-c2 p {
+  justify-self: center;
+}
+
+.box-c3 {
+  grid-area: box-c3;
+  padding-top: 2%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
+  line-height: 5px;
 }
-
-.form-contact {
-  margin-top: 20em;
-  display: flex;
-  justify-content: center;
-}
-
-.contact-form {
-  margin-top: 40px;
-  background-color: rgba(255, 94, 0, 0.3);
-  padding: 40px;
-  border-radius: 30px;
-}
-
-p {
-  font-size: medium;
+.box-c3 .reset,
+.box-c3 .submit {
+  width: fit-content;
 }
 
 /**** SECC PRESTACIONES ****/
 .grid-prest {
-  height: 500px;
+  height: 87vh;
+  margin-top: 2%;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  background: rgb(23, 186, 97);
+  background: linear-gradient(rgba(0, 91, 0, 0.5), #fff);
 }
-
-.prest2 {
-  margin: 10px;
-}
-.prest2 img {
-  width: 455px;
-  border-radius: 10%;
-}
-
-.prest3 {
-  width: 100%;
+.grid-prest .prest2 {
+  margin-top: 60px;
   display: grid;
+  align-items: center;
   grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(2, 1fr);
 }
-.prest3 img {
+.grid-prest .prest2 img {
   border-radius: 10%;
   margin: 10px;
+}
+.grid-prest .prest3 {
+  width: 80%;
+  background-image: url();
 }
 
 /*********** TABLET 600px ***********/
@@ -383,7 +327,7 @@ p {
     top: 0;
     width: 100%;
     align-items: center;
-    background-color: rgb(23, 186, 97);
+    background-color: rgba(23, 186, 97, 0.5);
     height: 100%;
     overflow-y: auto;
     opacity: 0;
